# solanaceae_clamav

./: .gitmodules  CMakeLists.txt
.github/workflows/: ci.yml
plugins/: CMakeLists.txt  plugin_clamav_module.cpp
src/: CMakeLists.txt
src/solanaceae/clamav/: clamav_module.cpp  clamav_module.hpp  clamav_module_async_interface.hpp  clamav_module_async_wrapper.cpp  clamav_module_async_wrapper.hpp  clamav_module_interface.hpp  test_exe.cpp
